tests/scroll_corpus/errors/bad_type_def.scroll
// Type definition without braces
type Foo
scroll "bad" {
    description: "Should fail";
    require x: int;
    provide y: int;
    set y: int = 0;
}
